--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 # DataSource settings: set here configurations for the database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/wqm
 spring.datasource.username=root
-spring.datasource.password=chinmay
+spring.datasource.password=@Naman2002
 
 # Specify the DBMS dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
